# refugium

./: README.md  refugium-release.jks  refugium_projektstand_2026-05-10.md
app/: README.md  pubspec.yaml  slang.yaml  temp.txt
app/android/: build.gradle.kts
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/core/backup/: backup_service.dart
app/lib/core/crypto/: crypto_service.dart
app/lib/core/database/: database.dart  database.g.dart  database_provider.dart  tables.dart
app/lib/core/sync/: api_client.dart  app_mode_provider.dart  connection_provider.dart  foreground_service_channel.dart  full_sync_service.dart  notification_service.dart  nsd_client.dart  sync_provider.dart  sync_service.dart
app/lib/i18n/: de.i18n.json  strings.g.dart  strings_de.g.dart  strings_en.g.dart
app/linux/: CMakeLists.txt
app/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/linux/runner/: my_application.cc
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/windows/runner/: Runner.rc  main.cpp
backend/: .env  .gitignore  Cargo.toml  refugium.db
backend/migrations/: 001_initial.sql
backend/src/: crypto.rs  main.rs  models.rs  push.rs  routes.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
(+31 files in other folders)
